<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >	
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#ff0000"
        android:textAllCaps="true"
        android:gravity="center"
        android:text="@string/disclaimer" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lblSelect" />
<RadioGroup
    android:id="@+id/optGrpButtonSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/optSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:enabled = "true"
        android:text="@string/optSearchText" />

    <RadioButton
        android:id="@+id/optBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled = "false"
        android:visibility="gone"
        android:text="@string/optBackText" />

    <RadioButton
        android:id="@+id/optHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled = "false"
        android:visibility="gone"
        android:text="@string/optHomeText" />

    <RadioButton
        android:id="@+id/optMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled = "false"
        android:visibility="gone"
        android:text="@string/optMenuText" />
    
    <RadioButton
        android:id="@+id/optPlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled = "false"
        android:text="@string/optOtherText" />
    </RadioGroup>

    <Button
        android:id="@+id/btnFix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btnFix" />

    <Button
        android:id="@+id/btnUnfix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/btnUnfix" />
    <TextView
        android:id="@+id/lblResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lblResult" />
</LinearLayout>
</ScrollView>